# OPTKIT

./: .travis.yml  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  configure.ac  init.sh
QA/testcase/results/: ny_crime_100_100_0.json
QA/testcase/testscripts/: MC.sh  create_vertex_map.sh  crime_format.sh  test.sh
QA/unittest/CSR/: CC.txt  CC1.txt  csr1.dot  csr_reconstruct.dot  csr_reconstruct1.dot  intersect.txt  intersect1.txt
QA/unittest/MC/: csr.dot  sup_compt.txt  sup_e_opr.txt  sup_reduce_e.txt  truss_alg1.txt
QA/unittest/bgl/: bgl_janc.dot  bgl_jwang.dot  nycrime_stats.txt
QA/unittest/core/: 4_core_alg1.txt  core_alg1.txt  csr_e_opr.dot  csr_e_opr1.dot  deg_compt.txt  deg_compt1.txt  deg_e_opr.txt  deg_init1.txt  deg_reduce_v.txt  deg_reduce_v1.txt  deg_v_opr1.txt  jwang_core_alg1.txt
QA/unittest/dbscan/: core_alg1.txt  csr_e_opr1.dot  csr_v_opr.dot  deg_v_opr.txt  deg_v_opr1.txt  jwang_core_alg1.txt
QA/unittest/stmodel/: ny_crime_edges.txt  ny_crime_edges1.txt  ny_crime_st1.txt  ny_crime_truss_alg1.txt  ny_crime_truss_alg1_1.txt  ny_crime_truss_stmodel.txt  ny_crime_truss_stmodel_1.txt  simple_stats.txt  small_crime_edges.txt  small_crime_truss_alg1.txt
QA/unittest/truss/: build_sort_sup_e.txt  crime_data.txt  csr_e_opr.dot  csr_e_opr1.dot  csr_e_opr2.dot  csr_e_opr3.dot  jwang_truss_alg1.txt  small_crime_edges.txt  small_crime_st.txt  sup_compt1.txt  sup_e_opr1.txt  sup_e_opr2.txt  sup_e_opr3.txt  sup_e_opr4.txt  sup_init.txt  sup_init1.txt  sup_reduce_e1.txt  sup_reduce_e2.txt  truss_alg1.txt
back/: Config1.h  config.h  factory.h  graph_util.cpp  graph_util.h  insdis.h  insknap.cpp  insmc.cpp  parallel.cpp  timer.cpp  timer.h
data/CC/dr_shi_format/: 0  2  crimepair_1  crimepair_2  crimepair_20  crimepair_5
data/CC/dr_shi_format/edges/: crimepair_0
data/CC/dr_shi_format/vertices/: 1  20  5
data/CC/graphs/: crimepair_0  crimepair_1  crimepair_2  crimepair_20  crimepair_5
data/MC/: 4_clique.gr  janc.gr  janc_origin.gr  jwang.gr
data/experiments/results/: CHI_BURGLARY_100_100_10.json  CHI_BURGLARY_200_200_30.json  CHI_ROBBERY_100_100_10.json  CHI_ROBBERY_200_200_30.json  CHI_THEFT_200_200_30.json  DC_BURGLARY_100_100_10.json  DC_BURGLARY_200_200_30.json  DC_ROBBERY_100_100_10.json  DC_ROBBERY_200_200_30.json  DC_THEFT_100_100_10.json  DC_THEFT_200_200_30.json  NY_BURGLARY_100_100_10.json  NY_BURGLARY_200_200_30.json  NY_ROBBERY_100_100_10.json  NY_ROBBERY_200_200_30.json  NY_THEFT_100_100_10.json  NY_THEFT_200_200_30.json
data/truss/: crime_small_st.csv  ny_crime.csv
libs/: CSVparser.cpp  Makefile.am  Parser.h  helper.hpp
scripts/: OPTKITCreateTable.py  OPTKITLoadData.py  analysis_data.sh  batch_prepare_mrdata.sh  data_analysis.R  data_analysis.py  emr_analysis.sh  emr_knox.sh  emr_knox_temp.json  experiment_stmodel.sh  get_SNAP.sh  log_analysis.py  mapper.py  plot.R  prepare_graph_mapper.py  prepare_mrdata.py  process_SNAP.py  process_data.py  process_data.sh  process_data_conf.py  process_data_pattern.py  reducer.py
src/: .insdis.cpp.swp  .insdis.h.swp  Config.cpp  Config.h  CrimeSTModel.cpp  CrimeSTModel.h  EdgeListFactory.h  HELP.txt  MRExample.cpp  Makefile  Makefile.am  Makefile.in  STModel.h  Stats.cpp  Stats.h  bgl.h  config.h  core.cpp  core.h  crime_graph_builder.h  csr.cpp  csr.h  dbscan.cpp  dbscan.h  factory.h  graph_util.cpp  graph_util.h  insdis.cpp  insdis.h  insknap.cpp  insknap.h  insmc.cpp  insmc.h  insmed.cpp  insmed.h  instance.cpp  instance.h  list.cpp  list.h  listint.cpp  (+13 more)
src/.deps/: insdis.Po  insknap.Po  insmc.Po  insmed.Po  instance.Po  list.Po  listint.Po  main.Po  plist.Po  timer.Po  utils.Po
test/: Makefile.am  gt_core.cpp  gt_csr.cpp  gt_dbscan.cpp  gt_graph_util.cpp  gt_list.cpp  gt_main.cpp  gt_serialization.cpp  gt_stmodel.cpp  gt_truss.cpp  test_util.h
